products part added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/639ec19282.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="css/style.css">
     <script>
         module.exports = {
             theme: {
@@ -57,12 +58,53 @@
     <!-- Banner part End -->
     <!-- products part start -->
     <section>
-   <div class="container mx-auto">
-    <div class="common-header mx-auto text-center">
-        <h3 class="font-manrope font-extrabold text-4xl text-Headingcolor">Our Featured Products</h3>
-        <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 px-[195px]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-    </div>
-   </div>
+        <div class="container mx-auto">
+            <div class="common-header mx-auto text-center">
+                <h3 class="font-manrope font-extrabold text-4xl text-Headingcolor">Our Featured Products</h3>
+                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 px-[195px]">There
+                    are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                    in some form, by injected humour, or randomised words which don't look even slightly believable.
+                </p>
+            </div>
+            <div class="products-wrapper flex g-6">
+                <div
+                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    <div class="products-image">
+                        <img src="images/tea-1.png" alt="tea1">
+                    </div>
+                    <h3 class="font-manrope font-extrabold pt-7 pb-2  text-2xl text-Headingcolor">Milk Tea</h3>
+                    <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
+                        replaced by fresh milk</p>
+                </div>
+                <div
+                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    <div class="products-image">
+                        <img src="images/tea-2.png" alt="tea1">
+                    </div>
+                    <h3 class="font-manrope font-extrabold text-2xl pt-7 pb-2  text-Headingcolor">Black Tea</h3>
+                    <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
+                        replaced by fresh milk</p>
+                </div>
+                <div
+                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    <div class="products-image">
+                        <img src="images/tea-3.png" alt="tea1">
+                    </div>
+                    <h3 class="font-manrope font-extrabold pt-7 pb-2  text-2xl text-Headingcolor">Lemon Tea</h3>
+                    <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
+                        replaced by fresh milk</p>
+                </div>
+                <div
+                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    <div class="products-image">
+                        <img src="images/tea-4.png" alt="tea1">
+                    </div>
+                    <h3 class="font-manrope font-extrabold text-2xl pt-7 pb-2 text-Headingcolor">Green Tea</h3>
+                    <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
+                        replaced by fresh milk</p>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- products part End -->
 
