--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         paracolor: '#777777',
                         primarycolor: '#F4F4F4',
                         secondary: '#5D5A6F',
+                        fadd: ['270deg, #FF0000 0%', '#FF8938 100%'],
                     },
                     fontFamily: {
                         manrope: ['Manrope', 'sans-serif'],
@@ -95,7 +96,7 @@
                         replaced by fresh milk</p>
                 </div>
                 <div
-                    class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
+                    class="products-item p-8 rounded-[10px] bg-gradient-to-b from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
                     <div class="products-image">
                         <img src="images/tea-4.png" alt="tea1">
                     </div>
@@ -107,6 +108,44 @@
         </div>
     </section>
     <!-- products part End -->
+    <!-- Great tea part started  -->
+    <section id="g-tea">
+        <div class="container mx-auto">
+            <div class="g-tea-wrapper flex justify-between gap-12 mt-40">
+                <div class="left-g-tea flex  gap-6 ">
+                    <div>
+                        <div
+                            class="tea-items1 rounded-xl w-60 opacity-10 h-32 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] ">
+                        </div>
+
+                        <div class="tea-items3 w-60 mt-6 py-10 w-60 px-11  bg-[rgba(88,118,57,0.1)]   rounded-lg">
+                            <img src="images/fresh-2.png" alt="fresh-2" class="w-full">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="tea-items2 px-8 pt-16 w-60  pb-8 bg-[rgba(230,165,35,0.1)] rounded-lg">
+                            <img src="images/fresh-1.png" alt="fresh-1" class="w-full">
+                        </div>
+                        <div
+                            class="tea-items4 mt-6  rounded-xl  opacity-10 w-60 h-32 bg-[linear-gradient(90deg,_#D9D9D9_0%,_rgba(255,_255,_255,_0)_100%)]">
+                            </div>
+                    </div>
+                </div>
+                <div class="right-g-tea ">
+                    <h3  class="font-manrope font-extrabold text-4xl text-Headingcolor mb-4">Great Tea, Freshly Presented</h3>
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[161px] mb-6">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
+                        It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+                        deeply appreciated by its custoers because of good words of mouth and unique customized service
+                        orginated from Taiwan.</p>
+                    <h4 class="font-manrope font-extrabold text-xl text-Headingcolor">Unique Taste</h4>
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[266px]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <h4 class="font-manrope font-extrabold text-xl text-Headingcolor ">Premium Quality</h4>
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[266px]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Great tea part Ended -->
 
 </body>
 
