comments part added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         paracolor: '#777777',
                         primarycolor: '#F4F4F4',
                         secondary: '#5D5A6F',
-                        fadd: ['270deg, #FF0000 0%', '#FF8938 100%'],
+                        textt:'#000000',
                     },
                     fontFamily: {
                         manrope: ['Manrope', 'sans-serif'],
@@ -39,10 +39,10 @@
         <div class="container mx-auto">
             <div class="banner-wrapper flex">
                 <div class="banner-content w-1/2">
-                    <h1 class="font-manrope font-extrabold text-7xl leading-[100px] pr-[92px] text-Headingcolor">It's
+                    <h1 class="font-manrope font-extrabold text-7xl leading-[100px] pr-[92px] text-[Headingcolor]">It's
                         good
                         tea time at The Tea House</h1>
-                    <p class="font-manrope font-medium text-base leading-[30px] pr-[190px] text-paracolor py-7">Tea and
+                    <p class="font-manrope font-medium text-base leading-[30px] pr-[190px] text-[paracolor] py-7">Tea and
                         Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
                     <a class="py-4 px-5 bg-gradient-to-r from-purple-500 to-pink-500 rounded-lg font-manrope text-lg font-bold text-white capitalize"
                         href="#">Explore More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -61,8 +61,8 @@
     <section>
         <div class="container mx-auto">
             <div class="common-header mx-auto text-center">
-                <h3 class="font-manrope font-extrabold text-4xl text-Headingcolor">Our Featured Products</h3>
-                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 px-[195px]">There
+                <h3 class="font-manrope font-extrabold text-4xl text-[Headingcolor]">Our Featured Products</h3>
+                <p class="font-manrope font-medium text-base leading-[28px]  text-[paracolor] pt-5 pb-12 px-[195px]">There
                     are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                     in some form, by injected humour, or randomised words which don't look even slightly believable.
                 </p>
@@ -73,8 +73,8 @@
                     <div class="products-image">
                         <img src="images/tea-1.png" alt="tea1">
                     </div>
-                    <h3 class="font-manrope font-extrabold pt-7 pb-2  text-2xl text-Headingcolor">Milk Tea</h3>
-                    <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
+                    <h3 class="font-manrope font-extrabold pt-7 pb-2  text-2xl text-[Headingcolor]">Milk Tea</h3>
+                    <p class="font-manrope font-semibold text-base leading-[21px]  text-[paracolor]">Creamer could be
                         replaced by fresh milk</p>
                 </div>
                 <div
@@ -82,8 +82,8 @@
                     <div class="products-image">
                         <img src="images/tea-2.png" alt="tea1">
                     </div>
-                    <h3 class="font-manrope font-extrabold text-2xl pt-7 pb-2  text-Headingcolor">Black Tea</h3>
-                    <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
+                    <h3 class="font-manrope font-extrabold text-2xl pt-7 pb-2  text-[Headingcolor]">Black Tea</h3>
+                    <p class="font-manrope font-semibold text-base leading-[21px]  text-[paracolor]">Creamer could be
                         replaced by fresh milk</p>
                 </div>
                 <div
@@ -91,8 +91,8 @@
                     <div class="products-image">
                         <img src="images/tea-3.png" alt="tea1">
                     </div>
-                    <h3 class="font-manrope font-extrabold pt-7 pb-2  text-2xl text-Headingcolor">Lemon Tea</h3>
-                    <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
+                    <h3 class="font-manrope font-extrabold pt-7 pb-2  text-2xl text-[Headingcolor]">Lemon Tea</h3>
+                    <p class="font-manrope font-semibold text-base leading-[21px]  text-[paracolor]">Creamer could be
                         replaced by fresh milk</p>
                 </div>
                 <div
@@ -100,8 +100,8 @@
                     <div class="products-image">
                         <img src="images/tea-4.png" alt="tea1">
                     </div>
-                    <h3 class="font-manrope font-extrabold text-2xl pt-7 pb-2 text-Headingcolor">Green Tea</h3>
-                    <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
+                    <h3 class="font-manrope font-extrabold text-2xl pt-7 pb-2 text-[Headingcolor]">Green Tea</h3>
+                    <p class="font-manrope font-semibold text-base leading-[21px]  text-[paracolor]">Creamer could be
                         replaced by fresh milk</p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                             class="tea-items1 rounded-xl w-60 opacity-10 h-32 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] ">
                         </div>
 
-                        <div class="tea-items3 w-60 mt-6 py-10 w-60 px-11  bg-[rgba(88,118,57,0.1)]   rounded-lg">
+                        <div class="tea-items3 mt-6 py-10 w-60 px-11  bg-[rgba(88,118,57,0.1)]   rounded-lg">
                             <img src="images/fresh-2.png" alt="fresh-2" class="w-full">
                         </div>
                     </div>
@@ -132,20 +132,58 @@
                     </div>
                 </div>
                 <div class="right-g-tea ">
-                    <h3  class="font-manrope font-extrabold text-4xl text-Headingcolor mb-4">Great Tea, Freshly Presented</h3>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[161px] mb-6">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
+                    <h3  class="font-manrope font-extrabold text-4xl text-[Headingcolor] mb-4">Great Tea, Freshly Presented</h3>
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-[paracolor]  pr-[161px] mb-6">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
                         It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
                         deeply appreciated by its custoers because of good words of mouth and unique customized service
                         orginated from Taiwan.</p>
-                    <h4 class="font-manrope font-extrabold text-xl text-Headingcolor">Unique Taste</h4>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[266px]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
-                    <h4 class="font-manrope font-extrabold text-xl text-Headingcolor ">Premium Quality</h4>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[266px]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                    <h4 class="font-manrope font-extrabold text-xl text-[Headingcolor]">Unique Taste</h4>
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-[paracolor]  pr-[266px]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <h4 class="font-manrope font-extrabold text-xl text-[Headingcolor] ">Premium Quality</h4>
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-[paracolor]  pr-[266px]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
                 </div>
             </div>
         </div>
     </section>
     <!-- Great tea part Ended -->
+    <!-- comments part started -->
+    <section id="comment">
+        <div class="container mx-auto">
+            <div class="comment-item py-20 px-16 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] items-center ">
+              <div class="comment-wrapper flex">
+                <div class="comment-content">
+                    <h2 class="font-manrope font-extrabold text-[45px] text-[#F4F4F4] pr-[279px]">Meet Our Super Clients</h2>
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-[#777]  pr-[390px] mb-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <a class="px-7 py-3 text-[#FF0000]  rounded-lg font-[manrope] text-lg font-bold capitalize bg-white " href="#">Show All</a>
+                </div>
+                <div class="comment-image">
+                    <div class="comments pt-10  pb-8 pl-12 opacity-10 bg-white rounded-lg relative top-[-15px] left-[-30px]">
+                        <p  class="font-[manrope] font-normal text-base leading-[28px]  text-[#777]  ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h5 class="font-[manrope] font-bold text-base leading-[28px]  text-[Headingcolor]">Ilham Yuda</h5>
+                        <h6 class="font-[manrope] font-semibold text-base leading-[28px]  text-[secondary]" >Businessman</h6>
+                        <div class="client">
+                            <img src="images/client.png" alt="client" class="absolute top-[-15px] left-[-15px]">
+                        </div>
+                    </div>
+                    <div class="comments mt-[-75px] pt-10  pb-8 pl-12 bg-white rounded-lg relative top-[-20px] left-[-120px]">
+                        <p  class="font-[manrope] font-normal text-base leading-[28px]  text-[#777] ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h5 class="font-[manrope] font-bold text-base leading-[28px]  text-[Headingcolor]">Ilham Yuda</h5>
+                        <h6 class="font-[manrope] font-semibold text-base leading-[28px]  text-[secondary]" >Businessman</h6>
+                        <div class="client">
+                            <img src="images/client.png" alt="client" class="absolute top-[-15px] left-[-15px]">
+                        </div>
+                    </div>
+                    <div class="comments pt-10 pb-8 pl-12 mt-[-105px] opacity-10 bg-white rounded-lg relative top-[-15px] left-[-30px]">
+                        <p  class="font-[manrope] font-normal text-base leading-[28px]  text-[#777] ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h5 class="font-[manrope] font-bold text-base leading-[28px]  text-[Headingcolor]">Ilham Yuda</h5>
+                        <h6 class="font-[manrope] font-semibold text-base leading-[28px]  text-[secondary]" >Businessman</h6>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
+    </section>
+    <!-- comments part Ended -->
 
 </body>
 
