--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <!-- Banner part start -->
     <section id="banner">
         <div class="container mx-auto">
-            <div class="banner-wrapper flex">
-                <div class="banner-content w-1/2">
+            <div class="banner-wrapper md:flex">
+                <div class="banner-content md:w-1/2">
                     <h1
                         class="font-manrope text-headingcolor font-extrabold text-7xl leading-[100px]  text-headingcolor">
                         It's
@@ -50,7 +50,7 @@
                     <a class="py-4 px-5 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] rounded-lg font-manrope text-lg font-bold text-white capitalize"
                         href="#">Explore More <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-                <div class="banner-image w-1/2 relative">
+                <div class="banner-image md:w-1/2 relative">
                     <img src="images/banner.png" alt="banner" class="w-full">
                     <div class="five-star absolute bottom-[-25px]">
                         <img src="images/5star.png" alt="5star">
@@ -65,17 +65,17 @@
         <div class="container mx-auto">
             <div class="common-header mx-auto text-center">
                 <h3 class="font-manrope font-extrabold text-4xl text-headingcolor">Our Featured Products</h3>
-                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 px-[195px]">
+                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 md:px-[195px]">
                     There
                     are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                     in some form, by injected humour, or randomised words which don't look even slightly believable.
                 </p>
             </div>
-            <div class="products-wrapper flex g-6">
+            <div class="products-wrapper md:flex g-6">
                 <div
                     class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
                     <div class="products-image">
-                        <img src="images/tea-1.png" alt="tea1">
+                        <img src="images/tea-1.png" alt="tea1" class="w-full">
                     </div>
                     <h3 class="font-manrope font-extrabold pt-7 pb-2  text-2xl text-headingcolor">Milk Tea</h3>
                     <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
@@ -84,7 +84,7 @@
                 <div
                     class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
                     <div class="products-image">
-                        <img src="images/tea-2.png" alt="tea1">
+                        <img src="images/tea-2.png" alt="tea1 " class="w-full">
                     </div>
                     <h3 class="font-manrope font-extrabold text-2xl pt-7 pb-2  text-headingcolor">Black Tea</h3>
                     <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
@@ -93,7 +93,7 @@
                 <div
                     class="products-item p-8 rounded-[10px] bg-gradient-to-r from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
                     <div class="products-image">
-                        <img src="images/tea-3.png" alt="tea1">
+                        <img src="images/tea-3.png" alt="tea1" class="w-full">
                     </div>
                     <h3 class="font-manrope font-extrabold pt-7 pb-2  text-2xl text-headingcolor">Lemon Tea</h3>
                     <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
@@ -102,7 +102,7 @@
                 <div
                     class="products-item p-8 rounded-[10px] bg-gradient-to-b from-[#F4F4F4] to-[rgba(244, 244, 244, 0)]">
                     <div class="products-image">
-                        <img src="images/tea-4.png" alt="tea1">
+                        <img src="images/tea-4.png" alt="tea1" class="w-full">
                     </div>
                     <h3 class="font-manrope font-extrabold text-2xl pt-7 pb-2 text-headingcolor">Green Tea</h3>
                     <p class="font-manrope font-semibold text-base leading-[21px]  text-paracolor">Creamer could be
@@ -115,8 +115,8 @@
     <!-- Great tea part started  -->
     <section id="g-tea">
         <div class="container mx-auto">
-            <div class="g-tea-wrapper flex justify-between gap-12 mt-40">
-                <div class="left-g-tea flex  gap-6 ">
+            <div class="g-tea-wrapper md:flex justify-between gap-12 mt-40">
+                <div class="left-g-tea flex  gap-6 sm:w-full md:w-1/2">
                     <div>
                         <div
                             class="tea-items1 rounded-xl w-60 opacity-10 h-32 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] ">
@@ -138,16 +138,16 @@
                 <div class="right-g-tea ">
                     <h3 class="font-manrope font-extrabold text-4xl text-headingcolor mb-4">Great Tea, Freshly
                         Presented</h3>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[161px] mb-6">The
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  md:pr-[161px] mb-6">The
                         meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
                         It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
                         deeply appreciated by its custoers because of good words of mouth and unique customized service
                         orginated from Taiwan.</p>
                     <h4 class="font-manrope font-extrabold text-xl text-headingcolor">Unique Taste</h4>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[266px]">A Unique
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  md:pr-[266px]">A Unique
                         and different style from other teapots gives a luxurious and minimalist impression</p>
                     <h4 class="font-manrope font-extrabold text-xl text-headingcolor ">Premium Quality</h4>
-                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  pr-[266px]">Premium
+                    <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor  md:pr-[266px]">Premium
                         Quality that makes tea more elegant and more durable when you use it.</p>
                 </div>
             </div>
@@ -158,18 +158,19 @@
     <section id="comment">
         <div class="container mx-auto">
             <div class="comment-item py-20 px-16 bg-[linear-gradient(270deg,_#FF0000_0%,_#FF8938_100%)] items-center ">
-                <div class="comment-wrapper flex">
+                <div class="comment-wrapper  md:flex">
                     <div class="comment-content">
-                        <h2 class="font-manrope font-extrabold text-[45px] text-[#F4F4F4] pr-[279px]">Meet Our Super
+                        <h2 class="font-manrope font-extrabold text-[45px] text-[#F4F4F4] md:pr-[279px]">Meet Our Super
                             Clients</h2>
-                        <p class="font-manrope font-medium text-base leading-[28px]  text-[#777]  pr-[390px] mb-7">There
+                        <p class="font-manrope font-medium text-base leading-[28px]  text-[#777]  md:pr-[390px] mb-7">
+                            There
                             are many variations of passages of Lorem Ipsum available, but the majority have suffered
                             alteration in some form, by injected humour, or randomised words which don't look even
                             slightly believable. </p>
-                        <a class="px-7 py-3 text-[#FF0000]  rounded-lg font-[manrope] text-lg font-bold capitalize bg-white "
+                        <a class="px-7 py-3 text-[#FF0000]   rounded-lg font-[manrope] text-lg font-bold capitalize bg-white "
                             href="#">Show All</a>
                     </div>
-                    <div class="comment-image">
+                    <div class="comment-image sm:mt-[100px]">
                         <div
                             class="comments pt-10  pb-8 pl-12 opacity-10 bg-white rounded-lg relative top-[-15px] left-[-30px]">
                             <p class="font-[manrope] font-normal text-base leading-[28px]  text-[#777]  ">We are
@@ -184,7 +185,7 @@
                             </div>
                         </div>
                         <div
-                            class="comments mt-[-75px] pt-10  pb-8 pl-12 bg-white rounded-lg relative top-[-20px] left-[-120px]">
+                            class="comments mt-[-75px] pt-10  pb-8 pl-12 bg-white rounded-lg relative top-[-20px] md:left-[-120px]">
                             <p class="font-[manrope] font-normal text-base leading-[28px]  text-[#777] ">We are
                                 providing the best and suitable home insurance services for the people who are
                                 interested to treatment</p>
@@ -217,48 +218,61 @@
         <div class="container mx-auto">
             <div class="common-header mt-[130px] text-center">
                 <h3 class="font-[manrope] font-extrabold text-4xl text-headingcolor">News & Events</h3>
-                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 px-[195px]">
+                <p class="font-manrope font-medium text-base leading-[28px]  text-paracolor pt-5 pb-12 md:px-[195px]">
                     There
                     are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
                     in some form, by injected humour, or randomised words which don't look even slightly believable.
                 </p>
             </div>
-            <div class="news-wrapper flex justify-center gap-6">
-                <div class="news-item p-5  border-2 rounded-lg border-[#D2D2D2]">
-                    <div class="news-image rounded-lg">
-                        <img src="images/news-1.png" alt="news-1">
+            <div class="news-wrapper  md:flex justify-center gap-6">
+                <div class="news-item p-5 flex justify-center border-2 rounded-lg border-[#D2D2D2]">
+                    <div>
+                        <div class="news-image rounded-lg ">
+                            <img src="images/news-1.png" alt="news-1">
+                        </div>
+                        <p class="font-[manrope] font-medium text-base leading-[28px] mt-[10px] text-[#777777]">Feb 05,
+                            2027
+                        </p>
+                        <h5 class="font-[manrope] font-extrabold text-xl text-[#1C1C1C]">Collecting 8 points for
+                            discount
+                        </h5>
+                        <p class="font-[manrope] font-medium text-base leading-[28px]  text-[#777777] ">There are many
+                            variations of passages of <br> Lorem Ipsum available.</p>
+                        <h6><a class="font-[manrope] font-bold text-base text-[#1C1C1C]" href="#">Learn More</a></h6>
                     </div>
-                    <p class="font-[manrope] font-medium text-base leading-[28px] mt-[10px] text-[#777777]">Feb 05, 2027
-                    </p>
-                    <h5 class="font-[manrope] font-extrabold text-xl text-[#1C1C1C]">Collecting 8 points for discount
-                    </h5>
-                    <p class="font-[manrope] font-medium text-base leading-[28px]  text-[#777777] ">There are many
-                        variations of passages of <br> Lorem Ipsum available.</p>
-                    <h6><a class="font-[manrope] font-bold text-base text-[#1C1C1C]" href="#">Learn More</a></h6>
                 </div>
-                <div class="news-item p-5  border-2 rounded-lg border-[#D2D2D2]">
-                    <div class="news-image rounded-lg">
-                        <img src="images/news-2.png" alt="news-1">
+                <div
+                    class="news-item p-5 flex justify-center sm:mt-5 sm:mb-5 md:mt-0 md:mb-0  border-2 rounded-lg border-[#D2D2D2]">
+                    <div>
+                        <div class="news-image rounded-lg">
+                            <img src="images/news-2.png" alt="news-1">
+                        </div>
+                        <p class="font-[manrope] font-medium text-base leading-[28px] mt-[10px] text-[#777777]">Feb 05,
+                            2027
+                        </p>
+                        <h5 class="font-[manrope] font-extrabold text-xl text-[#1C1C1C]">Collecting 8 points for
+                            discount
+                        </h5>
+                        <p class="font-[manrope] font-medium text-base leading-[28px]  text-[#777777] ">There are many
+                            variations of passages of <br> Lorem Ipsum available.</p>
+                        <h6><a class="font-[manrope] font-bold text-base text-[#1C1C1C]" href="#">Learn More</a></h6>
                     </div>
-                    <p class="font-[manrope] font-medium text-base leading-[28px] mt-[10px] text-[#777777]">Feb 05, 2027
-                    </p>
-                    <h5 class="font-[manrope] font-extrabold text-xl text-[#1C1C1C]">Collecting 8 points for discount
-                    </h5>
-                    <p class="font-[manrope] font-medium text-base leading-[28px]  text-[#777777] ">There are many
-                        variations of passages of <br> Lorem Ipsum available.</p>
-                    <h6><a class="font-[manrope] font-bold text-base text-[#1C1C1C]" href="#">Learn More</a></h6>
                 </div>
-                <div class="news-item p-5  border-2 rounded-lg border-[#D2D2D2]">
-                    <div class="news-image rounded-lg">
-                        <img src="images/news-3.png" alt="news-1">
+                <div class="news-item p-5 flex justify-center border-2 rounded-lg border-[#D2D2D2]">
+                    <div>
+                        <div class="news-image rounded-lg">
+                            <img src="images/news-3.png" alt="news-1">
+                        </div>
+                        <p class="font-[manrope] font-medium text-base leading-[28px] mt-[10px] text-[#777777]">Feb 05,
+                            2027
+                        </p>
+                        <h5 class="font-[manrope] font-extrabold text-xl text-[#1C1C1C]">Collecting 8 points for
+                            discount
+                        </h5>
+                        <p class="font-[manrope] font-medium text-base leading-[28px]  text-[#777777] ">There are many
+                            variations of passages of <br> Lorem Ipsum available.</p>
+                        <h6><a class="font-[manrope] font-bold text-base text-[#1C1C1C]" href="#">Learn More</a></h6>
                     </div>
-                    <p class="font-[manrope] font-medium text-base leading-[28px] mt-[10px] text-[#777777]">Feb 05, 2027
-                    </p>
-                    <h5 class="font-[manrope] font-extrabold text-xl text-[#1C1C1C]">Collecting 8 points for discount
-                    </h5>
-                    <p class="font-[manrope] font-medium text-base leading-[28px]  text-[#777777] ">There are many
-                        variations of passages of <br> Lorem Ipsum available.</p>
-                    <h6><a class="font-[manrope] font-bold text-base text-[#1C1C1C]" href="#">Learn More</a></h6>
                 </div>
             </div>
         </div>
@@ -278,8 +292,8 @@
                         Started</a>
                 </div>
             </div>
-            <div class="footer-wrapper flex justify-evenly">
-                <div class="footer-items">
+            <div class="footer-wrapper md:flex justify-evenly">
+                <div class="footer-items sm:flex md:block justify-center">
                     <ul>
                         <li><a href="#" class="font-[manrope] font-semibold text-xl text-[#1C1C1C]">Quick Links</a></li>
                         <li><a href="#" class="font-[manrope] font-normal text-base text-[#494949]">Homes</a></li>
@@ -289,7 +303,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-items">
+                <div class="footer-items sm:flex md:block justify-center  mt-5 mb-5 md:mt-0 md:mb-0">
                     <ul>
                         <li><a href="#" class="font-[manrope] font-semibold text-xl text-[#1C1C1C]">Our Service</a></li>
                         <li><a href="#" class="font-[manrope] font-normal text-base text-[#494949]">Life Insurance</a>
@@ -302,24 +316,26 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-items">
+                <div class="footer-items sm:flex md:block justify-center">
                     <ul>
                         <li><a href="#" class="font-[manrope] font-semibold text-xl text-[#1C1C1C]">Help</a></li>
                         <li><a href="#" class="font-[manrope] font-normal text-base text-[#494949]">FAQs</a></li>
                         <li><a href="#" class="font-[manrope] font-normal text-base text-[#494949]">Contact Us</a></li>
                     </ul>
                 </div>
-                <div class="footer-items">
-                    <ul>
-                        <li><a href="#" class="font-[manrope] font-semibold text-xl text-[#1C1C1C]">Subscribe to our
-                                <br> newsletter</a></li>
-                    </ul>
-                    <div class="social-media">
-                        <h6 class="font-[jakarta] font-medium text-base text-[#494949] mt-[30px]">Email addres</h6>
-                        <hr class="w-305px text-[#494949] mt-[23px] mb-[45px]">
-                        <i class="fa-brands fa-facebook-f text-[#494949] text-lg mr-[20px]"></i>
-                        <i class="fa-brands fa-twitter  text-[#494949] text-lg mr-[20px]"></i>
-                        <i class="fa-brands fa-square-instagram  text-[#494949] text-lg"></i>
+                <div class="footer-items flex justify-center mt-5 md:mt-0 ">
+                    <div>
+                        <ul>
+                            <li><a href="#" class="font-[manrope] font-semibold text-xl text-[#1C1C1C]">Subscribe to our
+                                    <br> newsletter</a></li>
+                        </ul>
+                        <div class="social-media">
+                            <h6 class="font-[jakarta] font-medium text-base text-[#494949] mt-[30px]">Email addres</h6>
+                            <hr class="w-305px text-[#494949] mt-[23px] mb-[45px]">
+                            <i class="fa-brands fa-facebook-f text-[#494949] text-lg mr-[20px]"></i>
+                            <i class="fa-brands fa-twitter  text-[#494949] text-lg mr-[20px]"></i>
+                            <i class="fa-brands fa-square-instagram  text-[#494949] text-lg"></i>
+                        </div>
                     </div>
                 </div>
             </div>
